// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoomBasedMarkers SymbolsForDifferentZoomLevels smoke-test 1`] = `
<div class="CLASS_NAME_FILLER">
  <div class="CLASS_NAME_FILLER"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="CLASS_NAME_FILLER">
      <canvas class="CLASS_NAME_FILLER"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(670px, 331px) rotateX(0deg) rotateZ(0deg); cursor: inherit;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(624px, 324px) rotateX(0deg) rotateZ(0deg); cursor: inherit;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(626px, 322px) rotateX(0deg) rotateZ(0deg); cursor: inherit;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
    </div>
    <div class="CLASS_NAME_FILLER">
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
        <details class="CLASS_NAME_FILLER"
                 open
        >
          <summary class="CLASS_NAME_FILLER"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="CLASS_NAME_FILLER">
            ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`ZoomBasedMarkers TransformedSymbols smoke-test 1`] = `
<div class="CLASS_NAME_FILLER">
  <div class="CLASS_NAME_FILLER"
       style="position: relative; width: 100%; height: 100%;"
  >
    <div class="CLASS_NAME_FILLER">
      <canvas class="CLASS_NAME_FILLER"
              tabindex="0"
              aria-label="Map"
              role="region"
              width="1248"
              height="648"
              style="width: 1248px; height: 648px;"
      >
      </canvas>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(670px, 331px) rotateX(0deg) rotateZ(0deg); cursor: pointer;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(624px, 324px) rotateX(0deg) rotateZ(0deg); cursor: pointer;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
      <div class="CLASS_NAME_FILLER"
           style="transform: translate(-50%, -50%) translate(626px, 322px) rotateX(0deg) rotateZ(0deg); cursor: pointer;"
      >
        <span>
          <div color="#00FF00"
               size="15"
               class="CLASS_NAME_FILLER"
          >
          </div>
        </span>
      </div>
    </div>
    <div class="CLASS_NAME_FILLER">
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
      </div>
      <div class="CLASS_NAME_FILLER">
        <details class="CLASS_NAME_FILLER"
                 open
        >
          <summary class="CLASS_NAME_FILLER"
                   title="Toggle attribution"
                   aria-label="Toggle attribution"
          >
          </summary>
          <div class="CLASS_NAME_FILLER">
            ©
            <a href="https://carto.com/about-carto/"
               target="_blank"
               rel="noopener"
            >
              CARTO
            </a>
            , ©
            <a href="http://www.openstreetmap.org/about/"
               target="_blank"
            >
              OpenStreetMap
            </a>
            contributors
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;
